--- a/src/screens/MusicPage/Music.css
+++ b/src/screens/MusicPage/Music.css
@@ -72,6 +72,63 @@
 .offer-img img {
     width: 60px;
 }
+/* Wrapper must be relative */
+.tooltip-wrapper {
+    position: relative;
+    display: inline-block;
+}
+
+/* Tooltip box */
+.custom-tooltip {
+    position: absolute;
+    right: 110%;
+    bottom: 50%;
+    transform: translateY(50%);
+    background: #FFF;
+    color: #000;
+    padding: 8px 12px;
+    border-radius: 10px;
+    font-size: 13px;
+    white-space: nowrap;
+    z-index: 9999;
+    display: flex;
+    align-items: center;
+    gap: 8px;
+    box-shadow: 0 0 3px gray;
+}
+
+/* Tooltip arrow */
+.custom-tooltip::after {
+    content: "";
+    position: absolute;
+    right: -12px;
+    top: 50%;
+    transform: translateY(-50%);
+    border-width: 6px;
+    border-style: solid;
+    border-color: transparent transparent transparent gray;
+}
+
+/* Close button */
+.tooltip-close {
+    border: none;
+    color: #fff;
+    font-size: 14px;
+    cursor: pointer;
+    line-height: 1;
+    background-color: #000;
+}
+
+/* Icon styling (optional) */
+.offer-icon {
+    cursor: pointer;
+}
+.offer-data .btn-primary, .offer-data .btn-primary:hover{
+    background: none;
+    padding: 0;
+    border: none;
+}
+
 
 
 @media all and (max-width: 992px){
