--- a/src/components/layout/layout.css
+++ b/src/components/layout/layout.css
@@ -764,7 +764,7 @@
     display: flex;
     padding-top: 16px;
     padding-bottom: 16px;
-    justify-content: space-evenly;
+    justify-content: space-around;
     -webkit-box-align: center;
     align-items: center;
     z-index: 1400;
@@ -782,9 +782,9 @@
 
 @media (min-width: 900px) {
     .inner-fixed-div {
-        max-width: 31rem;
-        padding-left: 32px;
-        padding-right: 32px;
+        max-width: 25rem;
+        padding-left: 10px;
+        padding-right: 10px;
         margin-left: auto;
         margin-right: auto;
     }
