--- a/src/screens/ContactPage/StudentForm.css
+++ b/src/screens/ContactPage/StudentForm.css
@@ -66,6 +66,17 @@
     border: 1px solid #82BCFA !important;
 }
 
+/* Phone number field */
+.form-control-phone{
+  background: #0F2A47 !important;
+  border: 1px solid #82BCFA !important;
+  border-radius: 10px !important;
+  color: #FFF !important;
+}
+.react-tel-input .country-list{
+  background-color: #FF9e10 !important;
+}
+
 /* This is the specific rule for the dropdown arrow, it remains the same */
 .form-select.form-control-custom {
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'%3e%3cpath fill='none' stroke='%23a0aec0' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='m2 5 6 6 6-6'/%3e%3c/svg%3e");
