--- a/src/screens/ContactPage/StudentForm.css
+++ b/src/screens/ContactPage/StudentForm.css
@@ -74,7 +74,7 @@
   color: #FFF !important;
 }
 .react-tel-input .country-list{
-  background-color: #FF9e10 !important;
+  background-color: #0F2A47 !important;
 }
 
 /* This is the specific rule for the dropdown arrow, it remains the same */
@@ -165,6 +165,9 @@
   .custom-form-check {
     margin-bottom: 0.5rem;
     flex: 0 0 auto;
+  }
+  .react-tel-input .country-list{
+    max-width: 250px;
   }
 }
 
