Content update and few changes UI

--- a/src/screens/HomePage/HomePage.css
+++ b/src/screens/HomePage/HomePage.css
@@ -98,8 +98,8 @@
   width: 100px;
   height: 100px;
   margin: 1.2rem auto;
-  left: 75%;
-    bottom: 75%;
+  left: 70%;
+    top: 18%;
 }
 
 /* 🌞 Rotating Rays */
