--- a/src/index.css
+++ b/src/index.css
@@ -1208,5 +1208,19 @@ h1, h2, h3, h4, h5, h6 {
     min-height: 130px;
     padding: 9px 0;
     text-align: center;
+  }
 }
+
+/* Exam page */
+@media (max-width: 462px){
+  .exam-page .container .row {
+    padding-left: 5px !important;
+    padding-right: 5px !important;
+  }
+}
+@media (max-width: 767px){
+  .exam-page .container .mock-container{
+    padding-left: 0 !important;
+    padding-right: 0 !important;
+  }
 }
