Added robot, sitemap, meta-tags for next.js

--- a/app/globals.css
+++ b/app/globals.css
@@ -109,6 +109,10 @@ h1, h2, h3, h4, h5, h6 {
     font-size: 28px !important;
   }
 }
+/* MENU */
+/* #main-navbar-nav .mx-auto{
+  
+} */
 
 /* Find and replace or add this class */
 .hero-section-bg {
@@ -2342,7 +2346,7 @@ h1, h2, h3, h4, h5, h6 {
 /* This is the class we need for the TrustSection */
 .why-trust-section {
   background:
-    url('/images/topo-lines-bg.png') center / cover no-repeat, /* Blue lines on top */
+    url('/icons/topo-lines-bg.png') center / cover no-repeat, /* Blue lines on top */
     var(--primary-orange); /* Base orange color at the very back */
   
   position: relative;
